# Oracle-Infinity

./: README.md
apps/: package.json  tsconfig.json
runtime/: Cargo.toml
runtime/runtime/: Cargo.toml
runtime/runtime/src/: kitties.rs  lib.rs  oracle.rs
runtime/src/: service.rs
