[features]
default = ['std']
no_std = []
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'babe/std',
    'babe-primitives/std',
    'executive/std',
    'indices/std',
    'grandpa/std',
    'primitives/std',
    'sr-primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
]
[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.2'

[package]
authors = ['Bryan Chen']
edition = '2018'
name = 'substrate-kitties-runtime'
version = '2.0.0'

# [dependencies]
# serde = { version = "1.0", default-features = false, features = ["derive"], optional = true}
# serde_json = { version = "1.0", default-features = false }

[dependencies.babe]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-babe'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.babe-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.app-crypto]
default_features = false
git = "https://github.com/paritytech/substrate/"
package = "substrate-application-crypto"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'